--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
-    <string name="app_name">Currency-Exchange</string>
+    <string name="app_name">Currency Exchange</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="text_refresh_in">Refresh In</string>
+    <string name="text_time_60">60</string>
+    <string name="text_title_convert">Convert Currency</string>
+    <string name="input_from_amount">From amount %s</string>
+    <string name="input_to_amount">To amount %s</string>
+    <string name="button_convert">Convert</string>
+    <string name="title_converter">1 %1$s = %2$s</string>
 </resources>
